Minor change to Tutorial 1 but checking the GIT shell

--- a/content/tutorials/0010-intro-to-r/index.html
+++ b/content/tutorials/0010-intro-to-r/index.html
@@ -11,7 +11,7 @@ tags: ["tutorial"]
 <script src="https://cdn.datacamp.com/datacamp-light-latest.min.js"></script>
 <div id="welcome-to-r" class="section level1">
 <h1>Welcome to R!</h1>
-<p>Statistical analysis is the core of nearly all research projects and researchers have a wide variety of statistical tools that they can use, like <em>SPSS</em> and <em>SAS</em>. Unfortunately, these analysis tools are expensive or difficult to master so this lab manual introduces R, a powerful, open source statistical analysis program that is available free of charge. But before diving into a statistics package there is one important background fundamental that must be covered: data.</p>
+<p>Statistical analysis is the core for nearly all research projects and researchers have a wide variety of statistical tools that they can use, like <em>SPSS</em> and <em>SAS</em>. Unfortunately, these analysis tools are expensive or difficult to master so this lab manual introduces R, a powerful, open source statistical analysis program that is available free of charge. But before diving into a statistics package there is one important background fundamental that must be covered: data.</p>
 <div id="types-of-data" class="section level2">
 <h2>Types of Data</h2>
 <p>There are two main types of data and it is important to understand the difference between them since that determines appropriate statistical tests to be used in data analysis.</p>
